<resources>
    <string name="app_name">My Travels App</string>

    <!-- Activities title -->
    <string name="activity_travel_list_title">My travels</string>
    <string name="activity_travel_new_title">New travelEntity</string>
    <string name="activity_travel_details_title">Travel details</string>
    <string name="activity_travel_planning_title">Planning</string>
    <string name="activity_travel_places_title">Travel Places</string>
    <string name="activity_travel_places_details_title">Travel Places Details</string>
    <string name="activity_categories_title">My categories</string>
    <string name="activity_travel_places_location_title">Add location</string>

    <!-- Toolbar actions -->
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_search">Search</string>
    <string name="action_configure">Configure</string>
    <string name="action_planning">Planning</string>
    <string name="action_selection">Choose</string>
    <string name="action_add_location">Add location</string>

    <!-- Generic text -->
    <string name="text_search_box">Search&#8230;</string>
    <string name="text_colon">:</string>
    <string name="text_name">Name</string>
    <string name="text_destination">Destination</string>
    <string name="text_start_date">Start date</string>
    <string name="text_start_date_short">From</string>
    <string name="text_finish_date">Finish date</string>
    <string name="text_finish_date_short">To</string>
    <string name="text_observation">Observations</string>
    <string name="text_category">Category</string>
    <string name="text_undo">Undo</string>
    <string name="prompt_category">Choose a category</string>
    <string name="text_selection">Choose %1$d elements</string>
    <string name="text_selection_default">Choose elements</string>

    <!-- Error messages -->
    <string name="error_generic">An error has occurred, please try again.</string>
    <string name="error_required">This field is required.</string>
    <string name="error_date_format">Date format is invalid.</string>

    <!-- Image content description -->
    <string name="img_logo_description">The logo of application</string>

    <!-- Categories by default -->
    <string name="category_parks">Parks</string>
    <string name="category_museums">Museums</string>
    <string name="category_squares">Squares</string>
    <string name="category_monuments">Monuments</string>

    <!-- Travel specific text -->
    <string name="travel_delete">The travel has been removed</string>
    <string name="travel_error_delete">Could not remove the travel</string>
    <string name="travel_error_load">There was an error while loading travels</string>

    <!-- Category specific text-->
    <string name="category_error_travel_places">The category selected has travel places associated</string>
    <string name="category_delete">The category has been removed</string>
    <string name="category_delete_confirm">The category has travel places associated. Do you sure remove?</string>


    <string-array name="drawer_options">
        <item>Categorys</item>
        <item>Travel list</item>
        <item>Travels archived</item>
        <item>About</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>
