<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_travel"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/action_edit_travel"
        android:icon="@drawable/ic_mode_edit_white_18dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_edit"/>

    <item
        android:id="@+id/action_planning_travel"
        android:icon="@drawable/ic_today_white_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/action_planning" />
</menu>