<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_name"
            style="@style/AppTheme.FullEditText"
            android:hint="@string/text_name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
    android:id="@+id/label_observation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/label_name">

    <EditText
        android:id="@+id/txt_observation"
        style="@style/AppTheme.FullEditText"
        android:hint="@string/text_observation"
        android:inputType="textMultiLine"
        android:lines="20"
        android:minLines="2"
        android:scrollHorizontally="false"
        android:scrollbars="vertical"
        android:singleLine="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/label_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label_observation">
        <TextView
            android:id="@+id/txt_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_category" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_category"
            android:prompt="@string/prompt_category" />

    </android.support.design.widget.TextInputLayout>

    <include layout="@layout/view_progress" />

</RelativeLayout>